--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li>Twitter: <a href="https://twitter.com/protonmail">@ProtonMail</a></li>
         <li>Facebook: <a href="https://facebook.com/protonmail">Facebook.com/protonmail</a></li>
         <li>Reddit: <a href="https://www.reddit.com/r/ProtonMail/">/r/protonmail</a></li>
+        <li>Temporary Blog <a href="https://protonmaildotcom.wordpress.com">protonmaildotcom.wordpress.com</a></li>
     </ul>
     <h4>Support our defense fund to prevent these attacks:</h4>
     <ul>
