--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     body {
         font-family: 'Open Sans', sans-serif;
         padding: 2rem;
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         line-height: 1.8em;
         width: 60%;
         min-width: 600px;
@@ -43,20 +43,19 @@
 <body>
     <h4>For updates regarding ProtonMail's status during the DDOS attack:</h4>
     <ul>
-        <li>Twitter: <a href="https://twitter.com/protonmail">@ProtonMail</a></li>
-        <li>Facebook: <a href="https://facebook.com/protonmail">Facebook.com/protonmail</a></li>
-        <li>Reddit: <a href="https://www.reddit.com/r/ProtonMail/">/r/protonmail</a></li>
-        <li>Temporary Blog <a href="https://protonmaildotcom.wordpress.com">protonmaildotcom.wordpress.com</a></li>
+        <li>Twitter: <a target="_blank" href="https://twitter.com/protonmail">@ProtonMail</a></li>
+        <li>Facebook: <a target="_blank" href="https://facebook.com/protonmail">Facebook.com/protonmail</a></li>
+        <li>Reddit: <a target="_blank" href="https://www.reddit.com/r/ProtonMail/">/r/protonmail</a></li>
+        <li>Temporary Blog: <a target="_blank" href="https://protonmaildotcom.wordpress.com">protonmaildotcom.wordpress.com</a></li>
     </ul>
     <h4>Support our defense fund to prevent these attacks:</h4>
     <ul>
-        <li>Bitcoin: <a href="https://blockchain.info/address/1Q1nhq1NbxPYAbw1BppwKbCqg58ZqMb9A8?filter=2">1Q1nhq1NbxPYAbw1BppwKbCqg58ZqMb9A8</a></li>
-        <li>GoFundMe: <a href="https://www.gofundme.com/protonmaildefense">gofundme.com/protonmaildefense</a></li>
+        <li>Bitcoin: <a target="_blank" href="https://blockchain.info/address/1Q1nhq1NbxPYAbw1BppwKbCqg58ZqMb9A8?filter=2">1Q1nhq1NbxPYAbw1BppwKbCqg58ZqMb9A8</a></li>
+        <li>GoFundMe: <a target="_blank" href="https://www.gofundme.com/protonmaildefense">gofundme.com/protonmaildefense</a></li>
     </ul>
     <h4>Contact us directly:</h4>
     <ul>
-        <li>Jason Stockman: <strong>hello</strong> [at] <strong>jasonstockman</strong> [dot] <strong>com</strong></li>
-        <li>Andy Yen: <strong>andyyen4</strong> [at] <strong>yahoo</strong> [dot] <strong>com</strong></li>
+        <li>contact [at] protonstatus [dot] com</li>
     </ul>
 </body>
 </html>
