--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </style>
 </head>
 <body>
+    <h1>We are back <a href="https://protonmail.com" target="_blank">online</a>.<br>A full report will be published shortly.</h1>
     <h4>For updates regarding ProtonMail's status during the DDOS attack:</h4>
     <ul>
         <li>Twitter: <a target="_blank" href="https://twitter.com/protonmail">@ProtonMail</a></li>
