--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         min-width: 600px;
         margin: auto;
     }
+    h1 {
+        line-height:2.1em;
+    }
     </style>
 </head>
 <body>
