--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     </style>
 </head>
 <body>
-    <h1>We are back <a href="https://protonmail.com" target="_blank">online</a>.<br>A full report will be published shortly.</h1>
+    <h1>We are back <a href="https://protonmail.com" target="_blank">online</a>.</h1>
+    <h3>A report about the attacks can be found here: <a href="https://protonmail.com/blog/protonmail-ddos-attacks/">https://protonmail.com/blog/protonmail-ddos-attacks/</a></h3>
     <h4>For updates regarding ProtonMail's status during the DDOS attack:</h4>
     <ul>
         <li>Twitter: <a target="_blank" href="https://twitter.com/protonmail">@ProtonMail</a></li>
